--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
-    <title>数字连续配对记忆测验</title>
+    <title>细节识别-雪花片</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="javascript/jquery-2.1.3.js"></script>
 </head>
 <body>
+
+<div style="font-size: 42px" id="hideTime">420</div>
 <div class="screen" id="screen1" style="display: block">
     <div class="logo img-box"><img src="img/logo.png"/></div>
     <div class="box-bg">
-        <ul class="box-text-1">
-            <li><i><img src="img/icon.png"/></i>对已发生的特定事件的记忆能力。</li>
-        </ul>
-        <div class="box-text-2"><p class="font-small">完成本测验大约需要10分钟</p></div>
-
+        <div class="box-text-2"><p class="font-big">快速辨别物体细节特征的能力。</p>
+            <p class="font-small">完成本测验大约需要10分钟。</p></div>
     </div>
 
     <div class="button-box">
@@ -33,48 +32,78 @@
 <div class="screen" id="screen2">
     <div class="box-bg box-bg-top">
         <div class="box-text-2">
-            <p>请判断下面图片上的物体属于自然界存在的</p>
-            <p><span>“自然物”</span>还是人类制造的<span>“人造物”</span>。</p>
-            <p>同时请您<span>记住这些图片，待会还要让您进行判断。</span></p>
+            <p>请您快速点击每页上两个完全一致的图形。</p>
         </div>
     </div>
     <div class="button-box">
-        <p class="button" id="goList">开始测验</p>
+        <p class="button" id="goPractice">开始练习</p>
     </div>
 </div>
 
 <div class="screen" id="list">
-    <ul class="list">
-        <li><p class="r1-1"></p></li>
-    </ul>
-    <div class="list-right">
-        <div class="list-right-title" id="pastBText">这张图片刚才是否出现过？</div>
-        <div class="button-box">
-            <p class="button" id="listButA">人造物</p>
-            <p class="button"  id="listButB">自然物</p>
-        </div>
-    </div>
-    <div class="stop img-box">
+    <div class="stop img-box" id="stopBntBox">
         <img src="img/stop.png" id="stop"/></div>
-    <div class="time-box">
-        <p><span id="time">4</span>秒</p>
+    <div class="time-box" id="timeBox">
+        <p><span id="time">30</span>秒</p>
     </div>
+    <div class="process processA" id="processA">
+        <ul>
+            <li>1</li>
+            <li>2</li>
+        </ul>
+        <div class="process-line"></div>
+    </div>
+    <div class="process processB" id="processB">
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+        </ul>
+        <div class="process-line"></div>
+    </div>
+    <ul class="interface" id="snow">
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+        <li><P class=""></P></li>
+    </ul>
+
+
 </div>
 
 
 <div class="screen" id="screen3">
     <div class="box-bg box-bg-top">
         <div class="box-text-2">
-            <p class="font-big">您回答的很好！接下来再给您看一些图片，</p>
-            <p class="font-small">其中有的图片刚才出现过，有的图片没出现过，</p>
-            <p class="font-small">请您判断每张图片刚才是否出现过。</p>
+            <p>您回答得很好！下面开始正式测验。</p>
+            <p>请您快速点击每页上两个完全一致的图形。</p>
         </div>
     </div>
     <div class="button-box">
-        <p class="button" id="start">开始测试</p>
+        <p class="button" id="goTest">开始测验</p>
     </div>
 </div>
-<div class="screen screen1" id="stopBox">
+
+
+<div class="screen" id="stopBox">
     <div class="logo img-box"><img src="img/logo.png"/></div>
     <div class="box-bg">
         <ul class="box-text-1">
@@ -93,13 +122,12 @@
 <div class="screen" id="over">
     <div class="box-bg box-bg-top">
         <div class="box-text-2">
-
             <p class="font-small">您回答得很好！</p>
             <p class="font-small">请点击下一步进入下一个测试</p>
         </div>
     </div>
     <div class="button-box">
-        <p class="button"  data-role="out">下一页</p>
+        <p class="button" data-role="out">下一页</p>
     </div>
 </div>
 
@@ -107,7 +135,6 @@
 <script src="javascript/gameView.js"></script>
 <script>
     var screenH = $(document).height()
-
     $('.box-bg').css({'font-size': screenH / 28, 'line-height': screenH / 14 + 'px'})
     $('.box-bg .font-small').css({'font-size': screenH / 31})
     $('.box-bg .font-big').css({'font-size': screenH / 26, 'line-height': screenH / 12 + 'px'})
@@ -119,10 +146,12 @@
         'line-height': screenH * 0.13 + 'px',
         'font-size': screenH / 33
     })
-    $('.time-box p span').css({'font-size': screenH / 21})
+    $('.time-box p span').css({'font-size': screenH / 18})
 
-    $('.list-right-title').css({'font-size': screenH / 24})
+    $('.process').css({'height': screenH / 15})
+    $('.process li').css({'font-size': screenH / 30, 'width': screenH / 15 + 'px'})
 
+    $('.interface').css({'width': screenH * 0.9, 'height': ((screenH * 0.8) / 5) * 3})
 
 </script>
 </body>
