--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <script src="javascript/jquery-2.1.3.js"></script>
 </head>
 <body>
-
-<div style="font-size: 42px" id="hideTime">420</div>
+<div style="display: none" id="hideTime">420</div>
 <div class="screen" id="screen1" style="display: block">
     <div class="logo img-box"><img src="img/logo.png"/></div>
     <div class="box-bg">
@@ -135,10 +134,11 @@
 <script src="javascript/gameView.js"></script>
 <script>
     var screenH = $(document).height()
-    $('.box-bg').css({'font-size': screenH / 28, 'line-height': screenH / 14 + 'px'})
-    $('.box-bg .font-small').css({'font-size': screenH / 31})
-    $('.box-bg .font-big').css({'font-size': screenH / 26, 'line-height': screenH / 12 + 'px'})
-    $('.button').css({'font-size': screenH / 30, 'line-height': screenH / 12 + 'px'})
+
+    $('.box-bg').css({'font-size': screenH / 22, 'line-height': screenH / 12 + 'px'})
+    $('.box-bg .font-small').css({'font-size': screenH / 24})
+    $('.box-bg .font-big').css({'font-size': screenH / 18, 'line-height': screenH / 8 + 'px'})
+    $('.button').css({'font-size': screenH / 24, 'line-height': screenH / 11 + 'px'})
     $('.time-box').css({'width': screenH * 0.14, 'font-size': screenH / 28})
     $('.time-box p').css({
         'width': screenH * 0.14,
@@ -146,7 +146,8 @@
         'line-height': screenH * 0.13 + 'px',
         'font-size': screenH / 33
     })
-    $('.time-box p span').css({'font-size': screenH / 18})
+    $('.time-box p span').css({'font-size': screenH / 21})
+
 
     $('.process').css({'height': screenH / 15})
     $('.process li').css({'font-size': screenH / 30, 'width': screenH / 15 + 'px'})
