游戏项目提交

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="logo img-box"><img src="img/logo.png"/></div>
     <div class="box-bg">
         <div class="box-text-2"><p class="font-big">快速辨别物体细节特征的能力。</p>
-            <p class="font-small">完成本测验大约需要10分钟。</p></div>
+            <p class="font-small"> 本测验大约需要5分钟。</p></div>
     </div>
 
     <div class="button-box">
